# mtmpg

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  build.rs  deny.toml  gitleaks.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  native-ci.yml  release.yml
docs/: authentication-failures.md  dependency-audit.md  executor-runtime.md  github-governance.md  release-and-compatibility.md  runtime-configuration.md
docs/evidence/issue-116/: artifact-readiness-gate.md  authentication-failure-observability.md  bootstrap-cold-authority.md  cargo-dependency-audit.md  migration-baseline.md  migration-boundary.md  migration-test-baseline.md  native-ci-bootstrap.md  pg18.4-runtime-oauth-smoke.md  pggomtm-source.sha256  production-artifact-capability-gate.md  production-identity-roundtrip.md  public-readiness-gate.md  public-repository-lifecycle.md  remote-source-identity.md  retrospective-public-readiness.md
examples/: pggomtm_oauth_smoke_fixture.rs  pggomtm_oauth_smoke_token.rs
executor/: Cargo.toml  Dockerfile  build.rs
executor/src/: auth.rs  issuer.rs  lib.rs  libpq.rs  main.rs  protocol.rs  service.rs  token_registry.rs
executor/tests/: hmac_envelope.rs  image-readiness.sh  issuer.rs  libpq_abi.rs  libpq_layout_probe.c  postgres_setup.sql  protocol.rs  stage-integration.sh  token_registry.rs
executor/tests/support/: executor_fixture.rs  pg18_driver.rs
openspec/changes/archive/2026-07-19-extract-and-standardize-pggomtm/: tasks.md
openspec/changes/archive/2026-07-19-extract-and-standardize-pggomtm/specs/pggomtm-release-supply-chain/: spec.md
openspec/changes/archive/2026-07-19-extract-and-standardize-pggomtm/specs/pggomtm-validator-module/: spec.md
openspec/changes/extract-and-standardize-pggomtm/: design.md  proposal.md  tasks.md
openspec/changes/extract-and-standardize-pggomtm/specs/pggomtm-release-supply-chain/: spec.md
openspec/changes/extract-and-standardize-pggomtm/specs/pggomtm-validator-module/: spec.md
openspec/changes/publish-rust-sql-executor/: design.md  proposal.md  tasks.md
openspec/changes/publish-rust-sql-executor/evidence/: red-baseline.md  release-forward-fix.md
openspec/changes/publish-rust-sql-executor/specs/delegated-sql-executor/: spec.md
openspec/changes/publish-rust-sql-executor/specs/pggomtm-release-supply-chain/: spec.md
openspec/changes/standardize-profile-role-contract-v2/: design.md  proposal.md  tasks.md
openspec/changes/standardize-profile-role-contract-v2/specs/pggomtm-validator-module/: spec.md
openspec/specs/pggomtm-release-supply-chain/: spec.md
openspec/specs/pggomtm-validator-module/: spec.md
scripts/: artifact-readiness  build-metadata  image-readiness  native-container  native-test  public-readiness
src/: auth_failure.rs  database_auth.rs  lib.rs  oauth_abi.rs  runtime_config.rs
src/runtime_config/: tests.rs
tests/: abi_layout.rs  artifact_identity.rs  artifact_readiness_gate.sh  auth_failure.rs  dockerfile_responsibility_gate.sh  image-readiness.sh  image_readiness_entrypoint.sh  jwt_identity.rs  native_container_entrypoint.sh  native_test_entrypoint.sh  oauth_bindings.rs  oauth_build_provenance.rs  oauth_layout_probe.c  oauth_runtime_probe.c  oauth_runtime_probe.sql  oauth_smoke_client.c  pgx_oauth_gate.rs  postgres_integration.sh  postgres_integration_container.sh  postgres_integration_entrypoint.sh  production_capability_gate.rs  public_readiness_gate.sh  runtime_config_missing_probe.sql  runtime_config_ready_probe.sql  runtime_config_validate_probe.sql  stage-integration.sh
tests/fixtures/public-readiness/: fake-gh  synthetic-private-key.pem
tests/fixtures/runtime-config/: jwks.json  validator.json
tests/support/: oauth_fixture.rs
