[package]
name = "pggomtm"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
abi-gate = []
abi-runtime-gate = []
pgx-oauth-gate = []

[dependencies]
jaws = { version = "=1.0.4", default-features = false, features = ["p256"] }
p256 = { version = "=0.13.2", features = ["ecdsa", "jwk"] }
pgrx = { version = "=0.19.1", default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
url = "=2.5.8"

[dev-dependencies]
base64ct = "=1.8.0"
sha2 = "=0.10.9"

[build-dependencies]
bindgen = { version = "=0.72.1", default-features = false, features = ["runtime"] }
sha2 = "=0.10.9"
