[package]
name = "pggomtm"
version = "0.2.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pggomtm_oauth_smoke_fixture"
path = "tests/support/oauth_fixture.rs"
required-features = ["pgx-oauth-gate"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
abi-gate = []
abi-runtime-gate = []
pgx-oauth-gate = []

[dependencies]
jaws = { version = "1", default-features = false, features = ["p256"] }
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
pgrx = { version = "0.19", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
base64ct = "1"
sha2 = "0.10"

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
