[package]
name = "pggomtm"
version = "0.2.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]
members = ["executor"]
resolver = "3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pggomtm_oauth_smoke_fixture"
path = "tests/support/oauth_fixture.rs"
required-features = ["pgx-oauth-gate"]

[features]
default = ["pg18"]
pg18 = ["database-token-contract", "dep:pgrx", "pgrx/pg18"]
database-token-contract = []
abi-gate = ["pg18"]
abi-runtime-gate = ["pg18"]
pgx-oauth-gate = ["pg18"]

[dependencies]
jaws = { version = "1", default-features = false, features = ["p256"] }
p256 = { version = "0.14", features = ["ecdsa", "jwk"] }
pgrx = { version = "0.19", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
base64ct = "1"
sha2 = "0.10"

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
