[package]
name = "mtmpg-executor"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
pggomtm = { path = "..", default-features = false, features = ["database-token-contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hmac = "0.12"
jaws = { version = "1", default-features = false, features = ["p256"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-manual-roots"] }
sha2 = "0.10"

[[example]]
name = "mtmpg_executor_fixture"
path = "tests/support/executor_fixture.rs"

[[example]]
name = "mtmpg_executor_pg18_driver"
path = "tests/support/pg18_driver.rs"
