[package]
name = "mtmpg-executor"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
hmac = "0.12"
jaws = { version = "1", default-features = false, features = ["p256"] }
p256 = { version = "0.13", features = ["ecdsa"] }
pggomtm = { path = "..", default-features = false, features = ["database-token-contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
pkg-config = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-manual-roots"] }

[[example]]
name = "mtmpg_executor_fixture"
path = "tests/support/executor_fixture.rs"

[[example]]
name = "mtmpg_executor_pg18_driver"
path = "tests/support/pg18_driver.rs"
